--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,8 +25,8 @@ def HOTFIX_IMAGE_TAG = "hotfix"
 //Uses same helm as PRD.
 
 //Git Variables
-def TAG_FILTER="release-m"
-def HOTFIX_TAG_FILTER = "hotfix-m"
+def TAG_FILTER="release-m-"
+def HOTFIX_TAG_FILTER = "hotfix-m-"
 
 //Image Variables
 def IMAGE_NAME = "helpline"
