--- a/jenkinsfile
+++ b/jenkinsfile
@@ -78,6 +78,7 @@ podTemplate(
                 COMMIT_HEAD_TAG = sh(returnStdout: true, script: "git tag -l --points-at HEAD | tail -1").trim()
                 echo 'Commit Head Tag:' + COMMIT_HEAD_TAG
                 echo 'Current Branch Name:' + env.BRANCH_NAME
+                //Build "App Version"
                 if (COMMIT_HEAD_TAG != "") {
                     if (COMMIT_HEAD_TAG.substring(0,TAG_FILTER.length()) == TAG_FILTER) {
                         APP_VERSION = COMMIT_HEAD_TAG.substring(TAG_FILTER.length(),COMMIT_HEAD_TAG.length())
@@ -135,6 +136,9 @@ podTemplate(
                     DEPLOY_IMAGE_NAME = OS_DEPLOY_PROJECT + '/' + IMAGE_NAME + ':' + DEPLOY_IMAGE_TAG
                     VALUES_YAML_FINAL = RELEASE_HELM_VALUES_LOC
                     RELEASE_NAME_FINAL = CHARTNAME_PREFIX + '-rel'
+                    if (COMMIT_HEAD_TAG == "") {
+                        error "No Git Version at Commit Head"
+                    } 
 
                 } else if (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER)){
                     echo 'Execute on specific "HotFix" Tag of:' + HOTFIX_TAG_FILTER
@@ -146,6 +150,9 @@ podTemplate(
                     DEPLOY_IMAGE_NAME = OS_DEPLOY_PROJECT + '/' + IMAGE_NAME + ':' + DEPLOY_IMAGE_TAG
                     VALUES_YAML_FINAL = PRD_HELM_VALUES_LOC
                     RELEASE_NAME_FINAL = CHARTNAME_PREFIX + '-prd'
+                    if (COMMIT_HEAD_TAG == "") {
+                        error "No Git Version at Commit Head"
+                    } 
 
                 }
                 else {
@@ -153,10 +160,10 @@ podTemplate(
                     echo 'Head Tag:' + COMMIT_HEAD_TAG
                     echo 'Branch Name:' + env.BRANCH_NAME
                 }
-                echo 'OpenShift Project Name: ' + OS_DEPLOY_PROJECT
+                echo 'Display Some Variables for Logging'
+                echo 'Deploy Project: ' + OS_DEPLOY_PROJECT
                 sh """
-                echo 'Here are some variables:'
-                echo '${OS_DEPLOY_PROJECT}'
+                echo 'Via Shell, App Version: ${APP_VERSION}'
                 """
             }
         }
@@ -219,17 +226,78 @@ podTemplate(
         
         container('openshift') {
             stage('Create Secrets') {
+            /*withCredentials([
+                string(credentialsId: 'psd-rails-master-key', variable: 'RAILS_MASTER_KEY'),
+                string(credentialsId: 'psd-helpline-database-password-tst', variable: 'DATABASE_PWD'),
+                string(credentialsId: 'psd-helpline-keybase', variable: 'KEYBASE')
+                ]) {
+                    
+                    //Put all of the If else in here.
+                    }
+            */
                 if (env.BRANCH_NAME == 'master') {
                     echo '1. Delete All Secrets in PRD. 2. Create Application Secrets in PRD.'
+                    sh """
+                    echo 'oc project ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret" -n ${OS_PROJECT_FINAL}'
+                    """
+
+                    sh """
+                    oc create secret generic bt-helpline-secret-rails --from-literal=RAILS_MASTER_KEY="${RAILS_MASTER_KEY}"
+                    oc create secret generic bt-helpline-secret --from-literal=database-password="${DATABASE_PWD}" --from-literal=keybase="${KEYBASE}"
+                    """ 
                 } else if (env.BRANCH_NAME == 'develop'){
                     echo '1. Delete All Secrets in TST. 2. Create Image build secretsin TST. 3. Create Application Secrets in TST.'
+                    sh """
+                    echo 'oc project ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret" -n ${OS_PROJECT_FINAL}'
+                    """               
+
+                    sh """
+                    oc create secret generic bt-helpline-secret-rails --from-literal=RAILS_MASTER_KEY="${RAILS_MASTER_KEY}"
+                    oc create secret generic bt-helpline-secret --from-literal=database-password="${DATABASE_PWD}" --from-literal=keybase="${KEYBASE}"
+                    """ 
                 } else if (env.BRANCH_NAME == 'stage'){
                     echo '1. Delete All Secrets in STG. 2. Create Image build secretsin TST. 3. Create Application Secrets in TST.'
+                    sh """
+                    echo 'oc project ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret" -n ${OS_PROJECT_FINAL}'
+                    """      
+
+                    sh """
+                    oc create secret generic bt-helpline-secret-rails --from-literal=RAILS_MASTER_KEY="${RAILS_MASTER_KEY}"
+                    oc create secret generic bt-helpline-secret --from-literal=database-password="${DATABASE_PWD}" --from-literal=keybase="${KEYBASE}"
+                    """ 
+
                 } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
                     echo '1. Delete All Secrets. 2. Create Image build secrets. 3. Create Application Secrets.'
+                    sh """
+                    echo 'oc project ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret" -n ${OS_PROJECT_FINAL}'
+                    """
+ 
+                    sh """
+                    oc create secret generic bt-helpline-secret-rails --from-literal=RAILS_MASTER_KEY="${RAILS_MASTER_KEY}"
+                    oc create secret generic bt-helpline-secret --from-literal=database-password="${DATABASE_PWD}" --from-literal=keybase="${KEYBASE}"
+                    """ 
+ 
                 } else if (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER)){
-                    echo 'No Checkmarx'
-                } else {
+                    echo '1. Delete All Secrets. 2. Create Image build secrets. 3. Create Application Secrets.'
+                    sh """
+                    echo 'oc project ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_PROJECT_FINAL}'
+                    echo 'oc delete secret "bt-helpline-secret" -n ${OS_PROJECT_FINAL}'
+                    """        
+ 
+                    sh """
+                    oc create secret generic bt-helpline-secret-rails --from-literal=RAILS_MASTER_KEY="${RAILS_MASTER_KEY}"
+                    oc create secret generic bt-helpline-secret --from-literal=database-password="${DATABASE_PWD}" --from-literal=keybase="${KEYBASE}"
+                    """ 
+ 
+                 } else {
                     echo 'No Checkmarx'
                     echo 'Head Tag:' + COMMIT_HEAD_TAG
                     echo 'Branch Name:' + env.BRANCH_NAME
@@ -399,7 +467,8 @@ podTemplate(
                         echo 'Deploy Production with helm to ' + OS_DEPLOY_PROJECT + ' with tag:' + DEPLOY_IMAGE_NAME
                         sh 'helm --help'
                     } else if (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER)) {
-                       
+                       //No deploy for Helm.  Could deploy into PRD off this (instead of merging to master.  Not sure I like)
+                       //Could deploy into Hot Fix environment, build one on the fly, or into Release.
                         echo 'No deploy for HotFix.'
                         
                     } else if (env.BRANCH_NAME == 'develop' || env.BRANCH_NAME == 'stage' || (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER))){
