--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,28 +1,28 @@
 def label = "jenkins-slave-${UUID.randomUUID().toString()}"
 //Production Variables
-def OS_PRD_PROJECT = "psd-helpline-prd"
+def PRD_OS_PROJECT = "psd-helpline-prd"
 def PRD_IMAGE_TAG = "production"
 def PRD_HELM_VALUES_LOC = "helm/helpline/values-prd.yaml"
 
 //Release Variables
-def OS_REL_PROJECT = "psd-helpline-rel"
-def RELEASE_IMAGE_TAG = "release"
-def RELEASE_HELM_VALUES_LOC = "helm/helpline/values-rel.yaml"
+def REL_OS_PROJECT = "psd-helpline-rel"
+def REL_IMAGE_TAG = "release"
+def REL_HELM_VALUES_LOC = "helm/helpline/values-rel.yaml"
 
 //Develop Variables
-def OS_DEV_PROJECT = "psd-helpline-tst"
-def DEVELOP_IMAGE_TAG = "test"
-def DEVELOP_HELM_VALUES_LOC = "helm/helpline/values-tst.yaml"
+def DEV_OS_PROJECT = "psd-helpline-tst"
+def DEV_IMAGE_TAG = "test"
+def DEV_HELM_VALUES_LOC = "helm/helpline/values-tst.yaml"
 
 //Stage Variables
-def OS_STG_PROJECT = "psd-helpline-stg"
-def STAGE_IMAGE_TAG = "feature"
-def STAGE_HELM_VALUES_LOC = "helm/helpline/values.yaml"
+def STG_OS_PROJECT = "psd-helpline-stg"
+def STG_IMAGE_TAG = "feature"
+def STG_HELM_VALUES_LOC = "helm/helpline/values.yaml"
 
 //HotFix Variables (Not all needed unless deploying.)
 //def OS_HOTFIX_PROJECT = "psd-helpline-hot"
-def HOTFIX_IMAGE_TAG = "hotfix"
-//def STAGE_HELM_VALUES_LOC = "helm/helpline/values-hot.yaml"
+def HOT_IMAGE_TAG = "hotfix"
+//def STG_HELM_VALUES_LOC = "helm/helpline/values-hot.yaml"
 
 //Git Variables
 def TAG_FILTER="release-m-"
@@ -38,16 +38,18 @@ def CHART_LOCATION = 'helm/helpline'
 def TGZ_DEST_DIR = 'helm'
 
 //Global Variables
-def BUILD_IMAGE_TAG = ""        //Image tag used when building image
-def BUILD_IMAGE_NAME = ""       //Image 
+def IMAGE_BUILD_OS_PROJECT = ""     //e.g. psd-helpline-tst
+def IMAGE_BUILD_TAG = ""            //:test
+def IMAGE_BUILD_FULL_NAME = ""      //Full Image Name Image 
 def DEPLOY_IMAGE_TAG = ""
 def DEPLOY_IMAGE_NAME = ""
 def COMMIT_HEAD_TAG = ""
 def RELEASE_NAME_FINAL = ""
 def VALUES_YAML_FINAL = ""
 def APP_VERSION = ""
-def OS_BUILD_PROJECT = ""       //Project that image will be built/tagged to.
+      //Project that image will be built/tagged to.
 def OS_DEPLOY_PROJECT = ""      //Project that the image will be pulled from for deployment.
+def SECONDARY_TAG_FINAL = ""
 
 podTemplate(
     label: label,
@@ -94,54 +96,61 @@ podTemplate(
                 echo 'Set Branch Variables Branch:'
                 if (env.BRANCH_NAME == 'master') {
                     echo 'Executing on Master'
-                    OS_DEPLOY_PROJECT = OS_PRD_PROJECT
+                    IMAGE_BUILD_OS_PROJECT = ""
+                    IMAGE_BUILD_TAG = ""
+                    OS_DEPLOY_PROJECT = PRD_OS_PROJECT
                     DEPLOY_IMAGE_TAG = APP_VERSION
                     DEPLOY_IMAGE_NAME = OS_DEPLOY_PROJECT + '/' + IMAGE_NAME + ':' + DEPLOY_IMAGE_TAG
                     RELEASE_NAME_FINAL = CHARTNAME_PREFIX + '-prd'
                     VALUES_YAML_FINAL = PRD_HELM_VALUES_LOC
+                    SECONDARY_TAG_FINAL = PRD_OS_PROJECT + '/' + IMAGE_NAME + ':' + APP_VERSION
                     //Tags for Master Release Checks.  Could add more filters, sig checks, etc.
                     if (COMMIT_HEAD_TAG == "") {
                         error "No Git Version at Master Head"
                     } 
                 } else if (env.BRANCH_NAME == 'develop'){
                     echo 'Execute on Develop'
-                    OS_BUILD_PROJECT = OS_DEV_PROJECT
-                    BUILD_IMAGE_TAG = DEVELOP_IMAGE_TAG
-                    OS_DEPLOY_PROJECT = OS_DEV_PROJECT
-                    DEPLOY_IMAGE_TAG = DEVELOP_IMAGE_TAG
-                    VALUES_YAML_FINAL = DEVELOP_HELM_VALUES_LOC
+                    IMAGE_BUILD_OS_PROJECT = DEV_OS_PROJECT
+                    IMAGE_BUILD_TAG = DEV_IMAGE_TAG
+                    OS_DEPLOY_PROJECT = DEV_OS_PROJECT
+                    DEPLOY_IMAGE_TAG = DEV_IMAGE_TAG
+                    VALUES_YAML_FINAL = DEV_HELM_VALUES_LOC
                     RELEASE_NAME_FINAL = CHARTNAME_PREFIX + '-dev'
+                    SECONDARY_TAG_FINAL = ""
 
                 } else if (env.BRANCH_NAME == 'stage'){
                     echo 'Execute on Stage'
-                    OS_BUILD_PROJECT = OS_STG_PROJECT
-                    BUILD_IMAGE_TAG = STAGE_IMAGE_TAG
-                    OS_DEPLOY_PROJECT = OS_STG_PROJECT
-                    DEPLOY_IMAGE_TAG = STAGE_IMAGE_TAG
-                    VALUES_YAML_FINAL = STAGE_HELM_VALUES_LOC
+                    IMAGE_BUILD_OS_PROJECT = STG_OS_PROJECT
+                    IMAGE_BUILD_TAG = STG_IMAGE_TAG
+                    OS_DEPLOY_PROJECT = STG_OS_PROJECT
+                    DEPLOY_IMAGE_TAG = STG_IMAGE_TAG
+                    VALUES_YAML_FINAL = STG_HELM_VALUES_LOC
                     RELEASE_NAME_FINAL = CHARTNAME_PREFIX + '-stg'
-
+                    SECONDARY_TAG_FINAL = ""
 
                 } else if (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)){
                     echo 'Execute on specific "Release" Tag of:' + TAG_FILTER
-                    OS_BUILD_PROJECT = OS_REL_PROJECT
-                    BUILD_IMAGE_TAG = RELEASE_IMAGE_TAG
-                    OS_DEPLOY_PROJECT = OS_REL_PROJECT
+                    IMAGE_BUILD_OS_PROJECT = REL_OS_PROJECT
+                    IMAGE_BUILD_TAG = REL_IMAGE_TAG
+                    OS_DEPLOY_PROJECT = REL_OS_PROJECT
                     DEPLOY_IMAGE_TAG = APP_VERSION
-                    VALUES_YAML_FINAL = RELEASE_HELM_VALUES_LOC
+                    VALUES_YAML_FINAL = REL_HELM_VALUES_LOC
                     RELEASE_NAME_FINAL = CHARTNAME_PREFIX + '-rel'
+                    SECONDARY_TAG_FINAL = OS_DEPLOY_PROJECT + '/' + IMAGE_NAME + ':' + APP_VERSION
+
                     if (COMMIT_HEAD_TAG == "") {
                         error "No Git Version at Commit Head"
                     } 
 
                 } else if (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER)){
                     echo 'Execute on specific "HotFix" Tag of:' + HOTFIX_TAG_FILTER
-                    OS_BUILD_PROJECT = OS_REL_PROJECT
-                    BUILD_IMAGE_TAG = HOTFIX_IMAGE_TAG
-                    OS_DEPLOY_PROJECT = OS_REL_PROJECT //Doesn't actually deploy.
+                    IMAGE_BUILD_OS_PROJECT = REL_OS_PROJECT
+                    IMAGE_BUILD_TAG = HOT_IMAGE_TAG
+                    OS_DEPLOY_PROJECT = REL_OS_PROJECT //Doesn't actually deploy.
                     DEPLOY_IMAGE_TAG = APP_VERSION
                     VALUES_YAML_FINAL = PRD_HELM_VALUES_LOC
                     RELEASE_NAME_FINAL = CHARTNAME_PREFIX + '-hot'  //Doesn't actually deploy or use helm.
+                    SECONDARY_TAG_FINAL = OS_DEPLOY_PROJECT + '/' + IMAGE_NAME + ':' + APP_VERSION
                     if (COMMIT_HEAD_TAG == "") {
                         error "No Git Version at Commit Head"
                     } 
@@ -155,8 +164,8 @@ podTemplate(
                 }
                 echo 'Display Some Variables for Logging'
                 echo 'Branch Name:' + env.BRANCH_NAME
-                echo 'Build Project: ' + OS_BUILD_PROJECT
-                echo 'Build Image Name: ' + OS_BUILD_PROJECT + '/' + IMAGE_NAME + ':' + BUILD_IMAGE_TAG
+                echo 'Build Project: ' + IMAGE_BUILD_OS_PROJECT
+                echo 'Build Image Name: ' + IMAGE_BUILD_OS_PROJECT + '/' + IMAGE_NAME + ':' + IMAGE_BUILD_TAG
                 echo 'Deploy Project: ' + OS_DEPLOY_PROJECT
                 echo 'Deploy Image Name: ' +  OS_DEPLOY_PROJECT + '/' + IMAGE_NAME + ':' + DEPLOY_IMAGE_TAG
                 echo 'Commit Tag: ' + COMMIT_HEAD_TAG
@@ -256,7 +265,7 @@ podTemplate(
                     echo '1. Delete All Secrets in TST. 2. Create Image build secretsin TST. 3. Create Application Secrets in TST.'
                     sh """
                     echo 'oc project ${OS_DEPLOY_PROJECT}'
-                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_BUILD_PROJECT}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${IMAGE_BUILD_OS_PROJECT}'
                     echo 'oc delete secret "bt-helpline-secret" -n ${OS_DEPLOY_PROJECT}'
                     """               
 
@@ -268,7 +277,7 @@ podTemplate(
                     echo '1. Delete All Secrets in STG. 2. Create Image build secretsin TST. 3. Create Application Secrets in TST.'
                     sh """
                     echo 'oc project ${OS_DEPLOY_PROJECT}'
-                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_BUILD_PROJECT}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${IMAGE_BUILD_OS_PROJECT}'
                     echo 'oc delete secret "bt-helpline-secret" -n ${OS_DEPLOY_PROJECT}'
                     """      
 
@@ -281,7 +290,7 @@ podTemplate(
                     echo '1. Delete All Secrets. 2. Create Image build secrets. 3. Create Application Secrets.'
                     sh """
                     echo 'oc project ${OS_DEPLOY_PROJECT}'
-                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_BUILD_PROJECT}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${IMAGE_BUILD_OS_PROJECT}'
                     echo 'oc delete secret "bt-helpline-secret" -n ${OS_DEPLOY_PROJECT}'
                     """
  
@@ -294,7 +303,7 @@ podTemplate(
                     echo '1. Delete All Secrets. 2. Create Image build secrets. 3. Create Application Secrets.'
                     sh """
                     echo 'oc project ${OS_DEPLOY_PROJECT}'
-                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${OS_BUILD_PROJECT}'
+                    echo 'oc delete secret "bt-helpline-secret-rails" -n ${IMAGE_BUILD_OS_PROJECT}'
                     echo 'oc delete secret "bt-helpline-secret" -n ${OS_DEPLOY_PROJECT}'
                     """
  
@@ -315,21 +324,35 @@ podTemplate(
                     || (env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)) \
                     || (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER)) \
                    ) {
-                    echo 'Build on Develop'
-                    echo 'Full Image Name:' + BUILD_IMAGE_NAME
+                    echo 'Build on ' + env.BRANCH_NAME
+                    echo 'Full Image Name:' + IMAGE_BUILD_FULL_NAME
 
                     //Image Tag is already set in BuildConfig
                     sh"""
                     oc whoami
-                    echo 'oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${OS_BUILD_PROJECT}'
+                    echo 'oc start-build "helpline-build" --from-repo="." --wait=true --follow -n ${IMAGE_BUILD_OS_PROJECT}'
                     """
-
                 } 
             }
-            stage('Tags') {
-                echo 'Tag Image as COMMIT_HEAD_TAG also'
-                sh "echo 'oc tag ${BUILD_IMAGE_NAME} ${DEPLOY_IMAGE_NAME}'"
-                echo 'Deploy Image Name (Different than Build): ' + DEPLOY_IMAGE_NAME
+            stage('Image Management') {
+                if ((env.BRANCH_NAME.contains(TAG_FILTER) && COMMIT_HEAD_TAG.contains(TAG_FILTER)) \
+                    || (env.BRANCH_NAME.contains(HOTFIX_TAG_FILTER) && COMMIT_HEAD_TAG.contains(HOTFIX_TAG_FILTER))) {
+                echo 'Tag Image as ' + SECONDARY_TAG_FINAL + 'also'
+                sh "echo 'oc tag ${IMAGE_BUILD_FULL_NAME} ${SECONDARY_TAG_FINAL}"
+                } else if (env.BRANCH_NAME == 'master') {
+                sh "echo 'oc tag psd-helpline-rel/helpline:gittag psd-helpline-prd/helpline:gittag"
+
+
+                }
+                //Release
+                sh "echo 'oc tag psd-helpline-rel/helpline:release psd-helpline-rel/helpline:gittag"
+
+                //HotFix
+                sh "echo 'oc tag psd-helpline-rel/helpline:hotfix psd-helpline-rel/helpline:gittag"
+
+                //Master Deploy
+                sh "echo 'oc tag psd-helpline-rel/helpline:gittag psd-helpline-prd/helpline:gittag"
+                //Could just grab :release and :hotfix image to tag as well.
 
             }
             stage ('Secrets Cleanup') {
@@ -348,16 +371,18 @@ podTemplate(
                     echo 'Run Helm Lint Test'
                     //sh 'helm lint ${CHART_LOCATION}'
                 }
-                if (env.BRANCH_NAME == 'master' ){
+//                if (env.BRANCH_NAME == 'master' ){
+                if (env.BRANCH_NAME == 'develop' ){
+
                     stage('Get Chartname') {
                         // Read from Chart values.  Get chartVersion
-                        //def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
-                        //def chartVersion = chartYaml.version.toString()
-                        //if (chartVersion == "") {
+                        def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
+                        def chartVersion = chartYaml.version.toString()
+                        if (chartVersion == "") {
                             //Failed to parse chartVersion. Helm package will fail.
-                        //    echo 'error: chartversion not found'
-                        //}
-                        echo 'Get ChartName from Chart.yaml'
+                            error: chartversion not found
+                        }
+                        echo 'Get ChartName from Chart.yaml' + chartVersion
                     }
                     stage('Package Helm'){
                         //Pacakge Helm
