--- a/jenkinsfile
+++ b/jenkinsfile
@@ -402,7 +402,7 @@ podTemplate(
 
                         writeYaml file: "helm/helpline/values.yaml", data: valuesYaml
                         writeYaml file: "helm/helpline/Chart.yaml", data: chartYaml
-
+                        echo valuesYaml
                         echo 'overwrite values.yaml'
                     }
                     stage('Push to ChartMuseum') {
