--- a/jenkinsfile
+++ b/jenkinsfile
@@ -366,16 +366,36 @@ podTemplate(
 //                if (env.BRANCH_NAME == 'master' ){
                 if (env.BRANCH_NAME == 'develop' ){
 
-                    stage('Get Chartname') {
+                    stage('Chart Versioning') {
                         // Read from Chart values.  Get chartVersion
                         def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
+                        def valuesYaml = readYaml file: 'helm/helpline/values.yaml'
+
                         def chartVersion = chartYaml.version.toString()
                         def appVersion = chartYaml.appVersion.toString()
+                        def currentImage = valuesYaml.images.apiTag.toString()
+
                         if (chartVersion == "") {
                             //Failed to parse chartVersion. Helm package will fail.
                             error: chartversion not found
                         }
-                        echo 'Get ChartName from Chart.yaml: ' + chartVersion
+                        echo 'Current Chart Version: ' + chartVersion
+                        echo 'Current App Version: ' + appVersion
+                        echo 'Current Image Tag: ' + currentImage
+
+                        //Overwrite some values
+                        valuesYaml.images.apiTag = APP_VERSION
+                        chartYaml.appVersion = APP_VERSION
+
+                        sh "rm -f helm/helpline/values.yaml"
+                        sh "rm -f helm/helpline/Chart.yaml"
+
+                        writeYaml file: "helm/helpline/values.yaml", data: valuesYaml
+                        writeYaml file: "helm/helpline/Chart.yaml", data: chartYaml
+
+                        //Add check of new yaml files values?
+                        echo 'overwrite values.yaml'
+
                     }
                     
                     stage('Package Helm'){
@@ -387,23 +407,12 @@ podTemplate(
                         //echo "Package Name: ${PACKAGE_NAME}"
                         //"""
                         echo 'Package helm into .tgz'
+                        echo 'Current Chart Version: ' + chartVersion
+                        echo 'Current App Version: ' + appVersion
+                        echo 'Current Image Tag: ' + currentImage
                     }
                     stage('Overwrite values.yaml') {
-                    // Read from values.yaml:
-                        def valuesYaml = readYaml file: 'helm/helpline/values.yaml'
-                        def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
-
-                    // Overwrite the image tag specified in values.yaml.
-                        valuesYaml.images.apiTag = APP_VERSION
-                        chartYaml.appVersion = APP_VERSION
-
-                        sh "rm -f helm/helpline/values.yaml"
-                        sh "rm -f helm/helpline/Chart.yaml"
-                        echo valuesYaml.images.apiTag.toString()
-                        writeYaml file: "helm/helpline/values.yaml", data: valuesYaml
-                        writeYaml file: "helm/helpline/Chart.yaml", data: chartYaml
-
-                        echo 'overwrite values.yaml'
+                    
                     }
                     stage('Push to ChartMuseum') {
                         //Push to ChartMuseum
